Prevent inputs from spilling

--- a/config/rootfs-additions-rpi3/www/configurator-styles.css
+++ b/config/rootfs-additions-rpi3/www/configurator-styles.css
@@ -47,7 +47,7 @@ input {
   border: none;
   border-radius: 2px;
   margin-bottom: 10px;
-  width: 100%;
+  width: 95%;
 }
 
 .btn {
